--- a/charts/controller/crds/deployments.plural.sh_workbenchtools.yaml
+++ b/charts/controller/crds/deployments.plural.sh_workbenchtools.yaml
@@ -59,7 +59,6 @@ spec:
                 items:
                   type: string
                 type: array
-                uniqueItems: true
               configuration:
                 description: Configuration is the tool-specific configuration (e.g.
                   HTTP).
@@ -104,6 +103,7 @@ spec:
                         format: uri
                         type: string
                     required:
+                    - method
                     - url
                     type: object
                 type: object
