--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -878,6 +878,16 @@
     - '1.24'
     - '1.23'
   publisher: eks
+- name: amazon-sagemaker-hyperpod-inference
+  versions:
+  - version: v1.0.0-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+  publisher: sagemaker
 - name: amazon-sagemaker-hyperpod-observability
   versions:
   - version: v1.0.4-eksbuild.1
@@ -3222,6 +3232,15 @@
   publisher: Catalogic Software
 - name: cert-manager
   versions:
+  - version: v1.19.3-eksbuild.2
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.19.3-eksbuild.1
     compatibilities:
     - '1.35'
