--- a/static/compatibilities/kube-prometheus-stack.yaml
+++ b/static/compatibilities/kube-prometheus-stack.yaml
@@ -5,22 +5,22 @@ readme_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/m
 helm_repository_url: https://prometheus-community.github.io/helm-charts
 chart_changelog_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/refs/heads/main/charts/kube-prometheus-stack/UPGRADE.md
 versions:
-- version: 81.6.3
+- version: 81.6.9
   kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
     '1.25']
   requirements: []
   incompatibilities: []
   summary:
     helm_changes: ''
-    chart_updates: ['Fix GrafanaDashboard CRDs missing labels from chart template
-        (PR #6634).', 'Update kube-prometheus-stack dependency non-major updates (PR
-        #6630).']
-    features: []
+    chart_updates: [Fixed admission webhook DNS name rendering in templates (affects
+        generated Service/DNS names for the operator admission webhook)., Bumped Grafana
+        chart/app version to v11.1.5 (dependency update).]
+    features: [Grafana dependency updated to 11.1.5 (brings upstream Grafana fixes/improvements).]
     breaking_changes: []
-  chart_version: 81.6.3
-  images: ['docker.io/bats/bats:1.13.0', 'docker.io/grafana/grafana:12.3.2', 'ghcr.io/jkroepke/kube-webhook-certgen:1.7.6',
+  chart_version: 81.6.9
+  images: ['docker.io/grafana/grafana:12.3.3', 'ghcr.io/jkroepke/kube-webhook-certgen:1.7.7',
     'quay.io/kiwigrid/k8s-sidecar:2.5.0', 'quay.io/prometheus-operator/prometheus-operator:v0.88.1',
-    'quay.io/prometheus/alertmanager:v0.31.0', 'quay.io/prometheus/node-exporter:v1.10.2',
+    'quay.io/prometheus/alertmanager:v0.31.1', 'quay.io/prometheus/node-exporter:v1.10.2',
     'quay.io/prometheus/prometheus:v3.9.1', 'registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.18.0']
 - version: 81.6.1
   kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
