Updated compatibility matrix 2026-02-15

--- a/static/compatibilities/external-secrets.yaml
+++ b/static/compatibilities/external-secrets.yaml
@@ -121,7 +121,25 @@ versions:
   kube: ['1.34']
   requirements: []
   incompatibilities: []
-  summary: null
+  summary:
+    helm_changes: "- **Chart values cleanup:** the chart removed some **unused values**\
+      \ (`chore(charts): remove unused values from chart`, PR #5334). If your `values.yaml`\
+      \ includes keys that are no longer referenced, they may be ignored or trigger\
+      \ schema/lint failures depending on your tooling\u2014run a diff/`helm template`\
+      \ and remove any obsolete keys.\n"
+    chart_updates: ['Helm chart released for v0.20.3 as part of the v0.20.4 notes
+        (PR #5467).', 'Chart values were cleaned up by removing unused options (PR
+        #5334).']
+    features: [New **hex generator** was added (generators)., AWS Secrets Manager
+        now supports defining a **resource policy via metadata**., "E2E \u201Cmanaged\
+        \ tests\u201D were re-implemented (primarily CI/test infrastructure, not user-facing\
+        \ behavior).", 'Infisical provider gained additional auth methods (Kubernetes,
+        AWS, token auth) noted earlier in the range (from v0.19.2 notes).']
+    breaking_changes: ['STSSessionToken generator documentation indicates the **JWT
+        token authentication option was removed**; if you relied on that auth mode,
+        migrate to a supported method.', UBI-based container images were updated from
+        **UBI8 to UBI9**; this can be breaking for environments with strict base-image
+        allowlists or vulnerability/compliance baselines.]
   chart_version: 0.20.4
   images: ['oci.external-secrets.io/external-secrets/external-secrets:v0.20.4']
 - version: 0.19.2
