--- a/static/extended/gke.yaml
+++ b/static/extended/gke.yaml
@@ -1,3 +1,6 @@
+- version: '1.35'
+  extended: false
+  extended_from: '2027-02-28'
 - version: '1.34'
   extended: false
   extended_from: '2026-08-30'
