--- a/go/controller/config/rbac/role.yaml
+++ b/go/controller/config/rbac/role.yaml
@@ -69,6 +69,7 @@ rules:
   - servicedeployments
   - stackdefinitions
   - upgradeplancallouts
+  - workbenchtools
   verbs:
   - create
   - delete
@@ -122,6 +123,7 @@ rules:
   - servicedeployments/finalizers
   - stackdefinitions/finalizers
   - upgradeplancallouts/finalizers
+  - workbenchtools/finalizers
   verbs:
   - update
 - apiGroups:
@@ -169,6 +171,7 @@ rules:
   - servicedeployments/status
   - stackdefinitions/status
   - upgradeplancallouts/status
+  - workbenchtools/status
   verbs:
   - get
   - patch
