add workbench mock methods and rbac rules

--- a/charts/controller/crds/deployments.plural.sh_workbenches.yaml
+++ b/charts/controller/crds/deployments.plural.sh_workbenches.yaml
@@ -12,7 +12,7 @@ spec:
     listKind: WorkbenchList
     plural: workbenches
     singular: workbench
-  scope: Cluster
+  scope: Namespaced
   versions:
   - additionalPrinterColumns:
     - description: ID of the Workbench in the Console API.
