simplify some more helm configs

--- a/charts/console/templates/secrets.yaml
+++ b/charts/console/templates/secrets.yaml
@@ -18,13 +18,10 @@ data:
 {{ end }}
   KAS_HOST: {{ .Values.ingress.kas_dns | default "" | b64enc | quote }}
   CONSOLE_HOST: {{ printf "console.%s:%d" .Release.Namespace (.Values.service.port | int) | b64enc | quote }}
-{{ if .Values.secrets.webhook_secret }}
-  WEBHOOK_SECRET: {{ .Values.secrets.webhook_secret | b64enc | quote }}
-{{ end }}
 {{ if .Values.secrets.erlang }}
   ERLANG_COOKIE: {{ .Values.secrets.erlang | b64enc | quote }}
 {{ end }}
-{{ if .Values.secrets.plural_client_id }}
+{{ if and .Values.secrets.plural_client_id (not .Values.console.customOidc.enabled) }}
   PLURAL_CLIENT_ID: {{ .Values.secrets.plural_client_id | b64enc | quote }}
   PLURAL_CLIENT_SECRET: {{ .Values.secrets.plural_client_secret | b64enc | quote }}
 {{ end }}
@@ -61,6 +58,17 @@ data:
 {{ range $key, $value := $extraSecretEnv }}
   {{ $key }}: {{ $value | b64enc | quote }}
 {{ end }}
+{{ if .Values.console.customOidc.enabled }}
+  OIDC_CLIENT_ID: {{ .Values.console.customOidc.clientId | b64enc | quote }}
+  OIDC_CLIENT_SECRET: {{ .Values.console.customOidc.clientSecret | b64enc | quote }}
+  OIDC_DISCOVERY_URL: {{ .Values.console.customOidc.discoveryUrl | b64enc | quote }}
+  OIDC_SCOPES: {{ .Values.console.customOidc.scopes | b64enc | quote }}
+{{ end }}
+{{ if .Values.console.config.airgap }}
+  CONSOLE_AIRGAP: {{ "true" | b64enc | quote }}
+  CONSOLE_DEPLOY_OPERATOR_URL: {{ "http://git-server.plrl-console:23232/deployment-operator.git" | b64enc | quote }}
+  CONSOLE_ARTIFACTS_URL: {{ "http://git-server.plrl-console:23232/scaffolds.git" | b64enc | quote }}
+{{ end }}
 {{ if and .Values.dex.clientSecret .Values.dex.enabled }}
   OIDC_CLIENT_ID: console
   OIDC_CLIENT_SECRET: {{ .Values.dex.clientSecret | b64enc | quote }}
@@ -68,6 +76,9 @@ data:
 {{ end}}
 {{ if .Values.console.config.rdsIamAuthentication }}
   CONSOLE_RDS_IAM_AUTH: {{ "true" | b64enc | quote }}
+{{ end }}
+{{ if .Values.console.config.agentHelmValues }}
+  CONSOLE_AGENT_HELM_VALUES: {{ .Values.console.config.agentHelmValues | toYaml | b64enc | quote }}
 {{ end }}
 {{ if .Values.cloud.pgRootCert }}
 ---
