--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -4363,6 +4363,15 @@
   publisher: datree
 - name: dynatrace_dynatrace-operator
   versions:
+  - version: v1.8.1-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.8.0-eksbuild.1
     compatibilities:
     - '1.35'
@@ -6623,6 +6632,24 @@
   publisher: eks
 - name: kube-state-metrics
   versions:
+  - version: v2.18.0-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+  - version: v2.17.0-eksbuild.7
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v2.17.0-eksbuild.6
     compatibilities:
     - '1.35'
