update controller chart with inputSchema requirement

--- a/charts/controller/crds/deployments.plural.sh_workbenchtools.yaml
+++ b/charts/controller/crds/deployments.plural.sh_workbenchtools.yaml
@@ -103,6 +103,7 @@ spec:
                         format: uri
                         type: string
                     required:
+                    - inputSchema
                     - method
                     - url
                     type: object
