--- a/charts/console/templates/cloud-query/secret.yaml
+++ b/charts/console/templates/cloud-query/secret.yaml
@@ -1,4 +1,4 @@
-{{- if not .Values.cloudQuery.database.password.existingSecret.name }}
+{{- if and (.Values.cloudQuery.database.enabled) (not .Values.cloudQuery.database.password.existingSecret.name) }}
 apiVersion: v1
 kind: Secret
 metadata:
