--- a/.github/workflows/oci-charts-ghcr.yaml
+++ b/.github/workflows/oci-charts-ghcr.yaml
@@ -48,10 +48,10 @@ jobs:
       if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository }}
       id: pr_tags
       run: |
-        echo "pr_tag=0.0.0-pr.${{ github.event.pull_request.number }}" >> "$GITHUB_OUTPUT"
-        echo "sha_tag=0.0.0+sha.${{ github.event.pull_request.head.sha }}" >> "$GITHUB_OUTPUT"
+        echo "pr_tag=0.0.0+pr-${{ github.event.pull_request.number }}" >> "$GITHUB_OUTPUT"
+        echo "sha_tag=0.0.0+sha-${{ github.event.pull_request.head.sha }}" >> "$GITHUB_OUTPUT"
 
-    - name: Push chart (0.0.0-pr.<number>)
+    - name: Push chart (0.0.0+pr-<number>)
       if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository }}
       uses: appany/helm-oci-chart-releaser@v0.5.0
       with:
@@ -64,7 +64,7 @@ jobs:
         registry_password: ${{ secrets.GITHUB_TOKEN }}
         update_dependencies: "true"
 
-    - name: Push chart (0.0.0+sha.<sha>)
+    - name: Push chart (0.0.0+sha-<sha>)
       if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository }}
       uses: appany/helm-oci-chart-releaser@v0.5.0
       with:
