update workbench sample agentRuntime ref

--- a/go/controller/config/samples/workbench.yaml
+++ b/go/controller/config/samples/workbench.yaml
@@ -80,7 +80,7 @@ metadata:
 spec:
   name: workbench-sample
   description: Sample AI workbench with HTTP tools
-  agentRuntime: gemini
+  agentRuntime: mgmt/gemini
   toolRefs:
     - name: workbenchtool-sample
       namespace: default
