--- a/charts/controller/crds/deployments.plural.sh_servicecontexts.yaml
+++ b/charts/controller/crds/deployments.plural.sh_servicecontexts.yaml
@@ -50,6 +50,51 @@ spec:
           spec:
             description: ServiceContextSpec defines the desired state of the ServiceContext.
             properties:
+              configMapRef:
+                description: |-
+                  ConfigMapRef references a ConfigMap containing configuration data to merge into the Configuration.
+                  The keys and values from the ConfigMap will be merged into the Configuration JSON.
+                properties:
+                  apiVersion:
+                    description: API version of the referent.
+                    type: string
+                  fieldPath:
+                    description: |-
+                      If referring to a piece of an object instead of an entire object, this string
+                      should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2].
+                      For example, if the object reference is to a container within a pod, this would take on a value like:
+                      "spec.containers{name}" (where "name" refers to the name of the container that triggered
+                      the event) or if no container name is specified "spec.containers[2]" (container with
+                      index 2 in this pod). This syntax is chosen only to have some well-defined way of
+                      referencing a part of an object.
+                    type: string
+                  kind:
+                    description: |-
+                      Kind of the referent.
+                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+                    type: string
+                  name:
+                    description: |-
+                      Name of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                    type: string
+                  namespace:
+                    description: |-
+                      Namespace of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+                    type: string
+                  resourceVersion:
+                    description: |-
+                      Specific resourceVersion to which this reference is made, if any.
+                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency
+                    type: string
+                  uid:
+                    description: |-
+                      UID of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
               configuration:
                 description: |-
                   Configuration is a reusable configuration context that can include any JSON-compatible configuration data
@@ -129,6 +174,21 @@ spec:
                     example: 5m30s
                     type: string
                 type: object
+              secretRef:
+                description: |-
+                  SecretRef references a Secret containing configuration data to merge into the Configuration.
+                  The keys and values from the Secret will be merged into the Configuration JSON.
+                properties:
+                  name:
+                    description: name is unique within a namespace to reference a
+                      secret resource.
+                    type: string
+                  namespace:
+                    description: namespace defines the space within which the secret
+                      name must be unique.
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
             type: object
           status:
             properties:
