--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -306,6 +306,15 @@
   publisher: akuity
 - name: amazon-cloudwatch-observability
   versions:
+  - version: v5.2.1-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
   - version: v5.2.0-eksbuild.1
     compatibilities:
     - '1.34'
@@ -326,6 +335,16 @@
     - '1.28'
   - version: v5.0.0-eksbuild.1
     compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
+  - version: v4.10.1-eksbuild.1
+    compatibilities:
+    - '1.35'
     - '1.34'
     - '1.33'
     - '1.32'
@@ -4209,6 +4228,17 @@
   publisher: CyberArk
 - name: datadog_operator
   versions:
+  - version: v0.1.24-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
+    - '1.27'
   - version: v0.1.23-eksbuild.1
     compatibilities:
     - '1.34'
